--- a/tppcompiler/03-compiladores-analise-semantica.ipynb
+++ b/tppcompiler/03-compiladores-analise-semantica.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementação de Compiladores"
+    "# **Implementação de Compiladores**\n",
+    "## Análise Semântica"
    ]
   },
   {
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,23 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NUMBER 3 5 2\n",
-      "PLUS + 5 4\n",
-      "NUMBER 4 5 6\n",
-      "TIMES * 5 8\n",
-      "NUMBER 10 5 10\n",
-      "PLUS + 6 16\n",
-      "MINUS - 6 18\n",
-      "NUMBER 20 6 19\n",
-      "TIMES * 6 22\n",
-      "NUMBER 2 6 23\n"
+      "NUMBER 3 2 2\n",
+      "PLUS + 2 4\n",
+      "NUMBER 4 2 6\n",
+      "TIMES * 2 8\n",
+      "NUMBER 10 2 10\n",
+      "PLUS + 3 16\n",
+      "MINUS - 3 18\n",
+      "NUMBER 20 3 19\n",
+      "TIMES * 3 22\n",
+      "NUMBER 2 3 23\n"
      ]
     }
    ],
@@ -163,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
