--- a/01_compiladores_analise_lexica_tpplex.ipynb
+++ b/01_compiladores_analise_lexica_tpplex.ipynb
@@ -21,6 +21,8 @@
     "## Preparação do Ambiente\n",
     "\n",
     "*   Instalação do [PLY](https://www.dabeaz.com/ply/ply.html)\n",
+    "\n",
+    "Alteração.\n",
     "\n"
    ]
   },
@@ -84,7 +86,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "id": "8V2XZckUT6vh"
+    "id": "8V2XZckUT6vh",
+    "jupyter": {
+     "source_hidden": true
+    }
    },
    "outputs": [],
    "source": [
