--- a/01_compiladores_analise_lexica_tpplex.ipynb
+++ b/01_compiladores_analise_lexica_tpplex.ipynb
@@ -85,13 +85,62 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SBuIbkFfUppX"
+        "id": "SBuIbkFfUppX",
+        "outputId": "01b34ec7-6f89-4544-ed88-fa8341fb1df9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        }
       },
       "source": [
-        ""
+        "!jupyter nbextension install https://rawgit.com/jfbercher/small_nbextensions/master/highlighter.zip  --user\n",
+        "!jupyter nbextension enable highlighter/highlighter"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading: https://rawgit.com/jfbercher/small_nbextensions/master/highlighter.zip -> /tmp/tmpxTceyO/highlighter.zip\n",
+            "Extracting: /tmp/tmpxTceyO/highlighter.zip -> /root/.local/share/jupyter/nbextensions\n",
+            "Enabling notebook extension highlighter/highlighter...\n",
+            "      - Validating: \u001b[32mOK\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a-s-dVnxdbZW",
+        "outputId": "a562d510-b6e1-4a32-e058-7778ecacac32",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "source": [
+        "%%javascript\n",
+        "require(\"base/js/utils\").load_extensions(\"highlighter/highlighter\")"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "require(\"base/js/utils\").load_extensions(\"highlighter/highlighter\")"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -113,7 +162,7 @@
         "import ply.lex as lex\n",
         "from ply.lex import TOKEN"
       ],
-      "execution_count": 2,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -157,7 +206,7 @@
         "    # 'COMENTARIO', # {***}\n",
         "]"
       ],
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": []
     },
     {
