Atualizado usando o Colaboratory

--- a/tppcompiler/02-compiladores-analise-sintatica-tppparser.ipynb
+++ b/tppcompiler/02-compiladores-analise-sintatica-tppparser.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "02-compiladores-analise-sintatica-tppparser.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -83,7 +84,7 @@
         "!pip install ply\n",
         "!pip install anytree"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +115,7 @@
         "!wget https://raw.githubusercontent.com/rogerioag/tutorial-de-compiladores/master/tppcompiler/tpplex.py\n",
         "!wget https://raw.githubusercontent.com/rogerioag/tutorial-de-compiladores/master/tppcompiler/mytree.py"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +162,7 @@
         "!rm tpplex.*\n",
         "!ls"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +193,7 @@
         ")\n",
         "log = logging.getLogger()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +211,7 @@
         "from anytree.exporter import DotExporter, UniqueDotExporter\n",
         "from anytree import RenderTree, AsciiStyle"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -951,7 +952,7 @@
         "        token = p\n",
         "        print(\"Erro:[{line},{column}]: Erro próximo ao token '{token}'\".format(line=token.lineno, column=token.lineno, token=token.value))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -995,7 +996,7 @@
         "        print(\"Unable to generate Syntax Tree.\")\n",
         "    print('\\n\\n')"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1017,7 +1018,7 @@
         "if __name__ == \"__main__\":\n",
         "    main()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1628,7 +1629,7 @@
         "  retorna(0)\n",
         "fim\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1657,7 +1658,7 @@
         "\n",
         "graphviz.Source(dot_graph)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1671,6 +1672,76 @@
             "tags": []
           },
           "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AVZ9T3wKIrAg"
+      },
+      "source": [
+        "## Tabela de Símbolos\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D6ClYQI0It2E"
+      },
+      "source": [
+        "symtable = {}\n",
+        "\n"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "56_KD4EJI9F0"
+      },
+      "source": [
+        "symtable['a'] = {\n",
+        "        'token': 'ID',\n",
+        "        'lexeme':'a',\n",
+        "        'line': 100,\n",
+        "        'label': 'ID',\n",
+        "        'dimension':1,\n",
+        "        'size_dim_1':1,\n",
+        "        'size_dim_2':0,    \n",
+        "        'id_type': 'ID',\n",
+        "        'declared':'S',\n",
+        "        'initialized': 'S',\n",
+        "        'args': None,\n",
+        "        'type': None,\n",
+        "        'scope': None\n",
+        "    }"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RKMaKcVZJTne",
+        "outputId": "53bb99c3-0b9d-4454-8356-c73b142d05b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(symtable['a']['id_type'], symtable['a']['dimension'])"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ID 1\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
