Atualizado usando o Colaboratory.

--- a/tppcompiler/03-compiladores-analise-semantica.ipynb
+++ b/tppcompiler/03-compiladores-analise-semantica.ipynb
@@ -49,13 +49,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "P30_qlzTGUws"
+        "id": "P30_qlzTGUws",
+        "outputId": "5756b110-356c-465a-b77e-833ebaaa3f9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "!pip install ply\n",
+        "!pip install anytree"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting ply\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a3/58/35da89ee790598a0700ea49b2a66594140f44dec458c07e8e3d4979137fc/ply-3.11-py2.py3-none-any.whl (49kB)\n",
+            "\r\u001b[K     |██████▋                         | 10kB 16.3MB/s eta 0:00:01\r\u001b[K     |█████████████▏                  | 20kB 1.6MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 30kB 2.0MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▍     | 40kB 2.2MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 51kB 1.5MB/s \n",
+            "\u001b[?25hInstalling collected packages: ply\n",
+            "Successfully installed ply-3.11\n",
+            "Collecting anytree\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a8/65/be23d8c3ecd68d40541d49812cd94ed0f3ee37eb88669ca15df0e43daed1/anytree-2.8.0-py2.py3-none-any.whl (41kB)\n",
+            "\u001b[K     |████████████████████████████████| 51kB 1.6MB/s \n",
+            "\u001b[?25hRequirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from anytree) (1.15.0)\n",
+            "Installing collected packages: anytree\n",
+            "Successfully installed anytree-2.8.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -63,7 +86,7 @@
         "id": "Z51oU0j3GUw9"
       },
       "source": [
-        "import ply.lex as lex"
+        ""
       ],
       "execution_count": null,
       "outputs": []
