Atualizado usando o Colaboratory

--- a/tppcompiler/04-compiladores-geracao-de-codigo.ipynb
+++ b/tppcompiler/04-compiladores-geracao-de-codigo.ipynb
@@ -49,14 +49,131 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "tFOSwil3mxtb",
+        "outputId": "d1058cd6-a01d-4661-b342-54e313ae4cc4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!pip install ply\n",
+        "!pip install anytree"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting ply\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a3/58/35da89ee790598a0700ea49b2a66594140f44dec458c07e8e3d4979137fc/ply-3.11-py2.py3-none-any.whl (49kB)\n",
+            "\r\u001b[K     |██████▋                         | 10kB 4.6MB/s eta 0:00:01\r\u001b[K     |█████████████▏                  | 20kB 829kB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 30kB 1.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▍     | 40kB 1.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 51kB 825kB/s \n",
+            "\u001b[?25hInstalling collected packages: ply\n",
+            "Successfully installed ply-3.11\n",
+            "Collecting anytree\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a8/65/be23d8c3ecd68d40541d49812cd94ed0f3ee37eb88669ca15df0e43daed1/anytree-2.8.0-py2.py3-none-any.whl (41kB)\n",
+            "\u001b[K     |████████████████████████████████| 51kB 908kB/s \n",
+            "\u001b[?25hRequirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from anytree) (1.15.0)\n",
+            "Installing collected packages: anytree\n",
+            "Successfully installed anytree-2.8.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "xUmAD1gAGpZW"
       },
       "source": [
         "from llvmlite import ir\n",
         "from llvmlite import binding as llvm"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ps06Xtvbmkeo"
+      },
+      "source": [
+        "llvm.initialize()\n",
+        "llvm.initialize_all_targets()\n",
+        "llvm.initialize_native_target()\n",
+        "llvm.initialize_native_asmprinter()\n",
+        "\n",
+        "\n",
+        "\n",
+        "module.triple = llvm.get_process_triple()\n",
+        "\n",
+        "target = llvm.Target.from_triple(module.triple)\n",
+        "target_machine = target.create_target_machine()\n",
+        "\n",
+        "module.data_layout = target_machine.target_data\n",
+        "\n",
+        "\n",
+        "\n",
+        "llvm.shutdown()"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7os7sxlcmKU7"
+      },
+      "source": [
+        "# Criação de um Módulo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XEtv5Q-jmNiM",
+        "outputId": "48e381f0-dd3c-4c1d-dacb-c88a8ff464ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from llvmlite import ir\n",
+        "\n",
+        "'''\n",
+        "Este módulo contém uma função main e criação de um array unidimensional como variável global e outro como local.\n",
+        "Será gerado um código em LLVM como este em C:\n",
+        "<<Colocar o Código do Exemplo de Referência.>>\n",
+        "'''\n",
+        "\n",
+        "# Cria o módulo.\n",
+        "module = ir.Module('meu_modulo.bc')\n",
+        "module.triple = llvm.get_process_triple()\n",
+        "target = llvm.Target.from_triple(module.triple)\n",
+        "target_machine = target.create_target_machine()\n",
+        "module.data_layout = target_machine.target_data\n",
+        "\n",
+        "# Código do Módulo.\n",
+        "\n",
+        "# Salva o Módulo.\n",
+        "arquivo = open('meu_modulo.ll', 'w')\n",
+        "arquivo.write(str(module))\n",
+        "arquivo.close()\n",
+        "print(module)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "; ModuleID = \"meu_modulo.bc\"\n",
+            "target triple = \"x86_64-unknown-linux-gnu\"\n",
+            "target datalayout = \"e-m:e-i64:64-f80:128-n8:16:32:64-S128\"\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
