--- a/tppcompiler/04-compiladores-geracao-de-codigo.ipynb
+++ b/tppcompiler/04-compiladores-geracao-de-codigo.ipynb
@@ -59,7 +59,7 @@
         "!pip install ply\n",
         "!pip install anytree"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,13 +89,18 @@
         "from llvmlite import ir\n",
         "from llvmlite import binding as llvm"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ps06Xtvbmkeo"
+        "id": "Ps06Xtvbmkeo",
+        "outputId": "071195a3-7abe-4bca-fe35-e435d5a18afb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 236
+        }
       },
       "source": [
         "llvm.initialize()\n",
@@ -116,8 +121,20 @@
         "\n",
         "llvm.shutdown()"
       ],
-      "execution_count": 5,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-961909e81ecd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mmodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtriple\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mllvm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_process_triple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mllvm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTarget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_triple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtriple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'module' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -161,7 +178,7 @@
         "arquivo.close()\n",
         "print(module)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,6 +186,179 @@
             "; ModuleID = \"meu_modulo.bc\"\n",
             "target triple = \"x86_64-unknown-linux-gnu\"\n",
             "target datalayout = \"e-m:e-i64:64-f80:128-n8:16:32:64-S128\"\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cK1hrVY3O1bV",
+        "outputId": "458baf06-4c2b-4e19-b91d-cd8b3f1d489b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from llvmlite import ir\n",
+        "\n",
+        "'''\n",
+        "Este módulo contém uma função main, declarações de variáveis, operações e atribuições\n",
+        "Será gerado um código em LLVM como este em C:\n",
+        "int g;\n",
+        "float h;\n",
+        "int main(){\n",
+        "  int a = 1;\n",
+        "  float b = 1.0;\n",
+        "  \n",
+        "  g = 10;\n",
+        "  h = 10.0;\n",
+        "  a = a + 10;\n",
+        "  b = b + h;\n",
+        "  \n",
+        "  return 0;\n",
+        "}\n",
+        "'''\n",
+        "\n",
+        "# Cria o módulo.\n",
+        "module = ir.Module('meu_modulo.bc')\n",
+        "module.triple = llvm.get_process_triple()\n",
+        "target = llvm.Target.from_triple(module.triple)\n",
+        "target_machine = target.create_target_machine()\n",
+        "module.data_layout = target_machine.target_data\n",
+        "\n",
+        "# Variável inteira global g\n",
+        "g = ir.GlobalVariable(module, ir.IntType(32),\"g\")\n",
+        "# Inicializa a variavel g\n",
+        "g.initializer = ir.Constant(ir.IntType(32), 0)\n",
+        "# Linkage = common\n",
+        "g.linkage = \"common\"\n",
+        "# Define o alinhamento em 4\n",
+        "g.align = 4\n",
+        "\n",
+        "# Variável float global h\n",
+        "h = ir.GlobalVariable(module, ir.FloatType(),\"h\")\n",
+        "# Inicializa a variavel h\n",
+        "h.initializer =  ir.Constant(ir.FloatType(), 0.0)\n",
+        "# Linkage = common\n",
+        "h.linkage = \"common\"\n",
+        "# Define o alinhamento em 4\n",
+        "h.align = 4\n",
+        "\n",
+        "# Define o retorno da função main\n",
+        "Zero32 = ir.Constant(ir.IntType(32), 0)\n",
+        "# Cria função main\n",
+        "t_func_main = ir.FunctionType(ir.IntType(32), ())\n",
+        "# Declara função main\n",
+        "main = ir.Function(module, t_func_main, name='main')\n",
+        "\n",
+        "# Declara o bloco de entrada\n",
+        "entryBlock = main.append_basic_block('entry')\n",
+        "endBasicBlock = main.append_basic_block('exit')\n",
+        "\n",
+        "# Adiciona o bloco de entrada\n",
+        "builder = ir.IRBuilder(entryBlock)\n",
+        "\n",
+        "# Cria o valor de retorno e inicializa com zero\n",
+        "returnVal = builder.alloca(ir.IntType(32), name='retorno')\n",
+        "builder.store(Zero32, returnVal)\n",
+        "\n",
+        "# int a = 1;\n",
+        "# float b = 1.0\n",
+        "\n",
+        "# Variável inteira 'a'\n",
+        "# Aloca na memória variável a do tipo inteiro com nome 'a'\n",
+        "a = builder.alloca(ir.IntType(32), name=\"a\")\n",
+        "# Define o alinhamento\n",
+        "a.align = 4\n",
+        "# Cria uma constante pra armazenar o numero 1\n",
+        "num1 = ir.Constant(ir.IntType(32),1)\n",
+        "# Armazena o 1 na variave 'a'\n",
+        "builder.store(num1, a)\n",
+        "\n",
+        "# Variavel float b\n",
+        "# Aloca na memoria \n",
+        "b = builder.alloca(ir.FloatType(), name=\"b\")\n",
+        "# Define o alinhamento\n",
+        "b.align = 4\n",
+        "# Cria uma constante pra armazenar o numero 1\n",
+        "num1Float = ir.Constant(ir.FloatType(), 1.0)\n",
+        "# Armazena o 1.0 na variavel 'b'\n",
+        "builder.store(num1Float, b)\n",
+        "\n",
+        "# g = 10\n",
+        "# Outra maneira de fazer o store (sem precisar criar constante pra armazenar numero)\n",
+        "builder.store( ir.Constant(ir.IntType(32), 10) , g )\n",
+        "\n",
+        "# h = 10.0\n",
+        "builder.store( ir.Constant(ir.FloatType(), 10.0) , h )\n",
+        "\n",
+        "# a = a + 10\n",
+        "a_temp = builder.load(a, \"\")\n",
+        "num10 = ir.Constant(ir.IntType(32), 10)\n",
+        "temp = builder.add(a_temp, num10, name='temp', flags=())\n",
+        "# Armazena o temp (a + 10) no a\n",
+        "builder.store(temp, a)\n",
+        "\n",
+        "# b = b + h\n",
+        "b_temp = builder.load(b, \"\")\n",
+        "h_temp = builder.load(h,\"\")\n",
+        "temp2 = builder.fadd( b_temp , h_temp , name='temp2', flags=())\n",
+        "# Armazena temp2 em b\n",
+        "builder.store(temp2, b)\n",
+        "\n",
+        "# Cria um salto para o bloco de saída\n",
+        "builder.branch(endBasicBlock)\n",
+        "\n",
+        "# Adiciona o bloco de saida\n",
+        "builder.position_at_end(endBasicBlock)\n",
+        "\n",
+        "# return 0\n",
+        "# Cria o return\n",
+        "returnVal_temp = builder.load(returnVal, name='', align=4)\n",
+        "builder.ret(returnVal_temp)\n",
+        "\n",
+        "arquivo = open('vars.ll', 'w')\n",
+        "arquivo.write(str(module))\n",
+        "arquivo.close()\n",
+        "print(module)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "; ModuleID = \"meu_modulo.bc\"\n",
+            "target triple = \"x86_64-unknown-linux-gnu\"\n",
+            "target datalayout = \"e-m:e-i64:64-f80:128-n8:16:32:64-S128\"\n",
+            "\n",
+            "@\"g\" = common global i32 0, align 4\n",
+            "@\"h\" = common global float              0x0, align 4\n",
+            "define i32 @\"main\"() \n",
+            "{\n",
+            "entry:\n",
+            "  %\"retorno\" = alloca i32\n",
+            "  store i32 0, i32* %\"retorno\"\n",
+            "  %\"a\" = alloca i32, align 4\n",
+            "  store i32 1, i32* %\"a\"\n",
+            "  %\"b\" = alloca float, align 4\n",
+            "  store float 0x3ff0000000000000, float* %\"b\"\n",
+            "  store i32 10, i32* @\"g\"\n",
+            "  store float 0x4024000000000000, float* @\"h\"\n",
+            "  %\".7\" = load i32, i32* %\"a\"\n",
+            "  %\"temp\" = add i32 %\".7\", 10\n",
+            "  store i32 %\"temp\", i32* %\"a\"\n",
+            "  %\".9\" = load float, float* %\"b\"\n",
+            "  %\".10\" = load float, float* @\"h\"\n",
+            "  %\"temp2\" = fadd float %\".9\", %\".10\"\n",
+            "  store float %\"temp2\", float* %\"b\"\n",
+            "  br label %\"exit\"\n",
+            "exit:\n",
+            "  %\".13\" = load i32, i32* %\"retorno\", align 4\n",
+            "  ret i32 %\".13\"\n",
+            "}\n",
             "\n"
           ],
           "name": "stdout"
