Atualizando usando o Colaboratory

--- a/tppcompiler/04-compiladores-geracao-de-codigo.ipynb
+++ b/tppcompiler/04-compiladores-geracao-de-codigo.ipynb
@@ -249,6 +249,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GocVcnzVZN9J"
+      },
+      "source": [
+        "# Declaração de Variável usando uma função\n",
+        "\n",
+        "* O código de declaração de variável global pode ser encapsulado em uma função:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "om_8TSWXGpZj"
@@ -259,7 +270,7 @@
         "    type_var = ir.IntType(32)\n",
         "  else:\n",
         "    type_var = ir.FloatType()\n",
-        "  \n",
+        "    \n",
         "  ref_var = ir.GlobalVariable(module, type_var, var_name)\n",
         "  # Inicializa a variavel i\n",
         "  ref_var.initializer = ir.Constant(type_var, 0)\n",
@@ -268,14 +279,14 @@
         "  # Define o alinhamento em 4\n",
         "  ref_var.align = 4\n"
       ],
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "sFHPbp8VWywn",
-        "outputId": "4e8a52bf-0ce5-4aab-abe1-df07a488963e",
+        "outputId": "38540397-27ea-416a-917f-4a6f731636a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -295,14 +306,13 @@
         "declararVariavelGlobal(module, \"i\", \"INTEIRO\")\n",
         "declararVariavelGlobal(module, \"f\", \"FLUTUANTE\")\n",
         "\n",
-        "\n",
         "# Salva o Módulo.\n",
         "arquivo = open('meu_modulo.ll', 'w')\n",
         "arquivo.write(str(module))\n",
         "arquivo.close()\n",
         "print(module)"
       ],
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
